--- a/web/methods/createProduct.html
+++ b/web/methods/createProduct.html
@@ -4,15 +4,15 @@
 
 <main>
     <h1>Создать продукт</h1>
-    <form action="/сreate_product" method="post">
-        <input type="text" name="title" id="title" placeholder="Введите наименование товара" class="form-control">
+    <form action="/createProduct" method="post">
+        <input type="text" name="title" id="title" placeholder="Введите наименование товара" class="w3-bar">
         <br>
-        <textarea name="anons" id="anons" class="form-control" placeholder="Введите анонс статьи"></textarea>
+        <textarea name="anons" id="anons" class="w3-bar" placeholder="Введите анонс статьи"></textarea>
         <br>
-        <textarea name="full_text" id="full_text" class="form-control" placeholder="Введите полный текст статьи"></textarea>
+        <textarea name="full_text" id="full_text" class="w3-bar" placeholder="Введите полный текст статьи"></textarea>
         <br>
 
-        <button class="btn btn-warning">Создать</button>
+        <button class="w3-button" name="submit" >Создать</button>
     </form>    
 </main>
 
